A lot of work
- Improved backend existing testing
- Added / Updated models
- Improved Swagger generation
- Added UserDesktopsGet method
